--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,588 @@
 
+$custom-easing: cubic-bezier(1, .1, 0, 0.9);
+$blue: #04CDE8;
+$darkBlue: #01579B;
+$neon: #00FFF8;
+$gray: #ccc;
+$distance: 70; //px
+$width: 30; //px
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+* {
+  margin: 0;
+  padding: 0;
+}
+html {
+   scroll-behavior: smooth;
+}
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.nav {
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    border-bottom: 2px solid #69D3A7;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    -webkit-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
+box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
+}
+.nav-image {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+}
+.hd {
+  width: 100%;
+  max-height: 200px;
+  background-color: #69CAD3;
+  overflow: hidden;
+  z-index: 0;
+}
+.hd-image {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0%);
+ 
+}
+.tree-img {
+  position: relative;
+  left: 50%;
+  transform: translate(-150%, 10%);
+    @media screen and (max-width: 600px) {
+     left: 50%;
+     transform: translate(-50%, -100%);
+     
+  }
+  z-index: 2;
+}
+.content {
+  width: 100%;
+  border-top: 2px solid #69D3A7;
+  -webkit-box-shadow: 0px 3px 10px 0px #69D3A7;
+-moz-box-shadow: 0px 3px 10px 0px #69D3A7;
+box-shadow: 0px -2px 10px 0px #69D3A7;
+   
+}
+
+.toggle_bar {
+  text-align:center;
+  border: 1px solid rgba(black,.1);
+  background: rgba(black,.1);
+  width: #{$distance}px;
+  display: block;
+  box-sizing: border-box;
+  height: #{$width}px;
+  position: relative;
+  overflow: hidden;
+  margin: 1em auto;
+  border-radius: 4px;
+  cursor: pointer;
+  .toggle_square {
+    border-radius: 4px;
+    transition: left .3s cubic-bezier(0.68, -0.55, 0.265, 1.55), background .2s ease;
+    background: rgba($blue, 1);
+    position: absolute;
+    top:0;
+    left: #{$distance - $width}px;
+    width: #{$width}px;
+    height: 100%;
+    box-shadow: 0 4px 16px 8px rgba(black,.15);
+    &:before {
+      content: "2020";
+      display: block;
+      color: white;
+      will-change: content;
+      transition: content .2s ease;
+      line-height: #{$width}px;
+      text-align: center;
+      font-size: 12px;
+      text-transform: uppercase;
+    }
+  }
+}
+.contract_toggle {
+  input[type=checkbox] {
+    display: none;
+    position: absolute;
+    appearance: none;
+    &:checked ~ .toggle_bar{
+      .toggle_square {
+        background: rgba($blue,1);
+        left: 0;
+        &:before {
+          content: "2019";
+        }
+      }
+    }
+  }
+}
+.center {
+  align-self: center;
+  display: block;
+}
+#calc {
+  padding: 20px;
+  margin: 0 auto;
+  max-width: 50%;
+  @media screen and (max-width: 928px) {
+    max-width: 80%;
+  }
+    @media screen and (max-width: 500px) {
+    max-width: 100%;
+    
+  }
+  border-bottom: 1px solid $gray;
+  .file-year{
+    text-align: center;
+     font-family: 'Open Sans';
+    font-size: 12px;
+    font-weight: 100;
+    color: #474f4a;
+    margin-bottom: -20px;
+  }
+  
+ 
+  .row {
+    margin-bottom: 25px;
+    position: relative;
+   
+    overflow: hidden;
+  }
+  .formRow{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    @media screen and (max-width: 650px) {
+    display: flex;
+    flex-direction: column;
+    
+  }
+  }
+  
+  select {
+    width: 90%;
+    height: 40px;
+    padding: 10px 10px 10px 90px;
+    margin-right: 40px;
+    box-sizing: border-box;
+    border-top: 0.1px solid #fff;
+    border-bottom: 1px solid $gray;
+    color: #333;
+    border-radius: 3px;
+    transition: all 0.3s $custom-easing;
+  }
+ .row >  label {
+     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    line-height: 40px;
+    font-size: 12px;
+    font-weight: bold;
+    width: 80px;
+    text-shadow: 0 0 2px rgba(0,0,0,0.1);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    color: white;
+    background: $blue;
+    border-radius: 3px 0 0 3px;
+    transition: all 0.3s $custom-easing;
+    transform: translateZ(0) translateX(0);
+  }
+    input[type="text"], input[type="password"]  {
+    width: 95%;
+    height: 40px;
+    padding: 10px 10px 10px 90px;
+    box-sizing: border-box;
+    border-top: 0.1px solid #fff;
+    border-right:  0.1px solid #fff;
+    border-bottom: 1px solid $gray;
+    color: #333;
+    border-radius: 3px;
+    transition: all 0.3s $custom-easing;
+  }
+  
+  textarea {
+    height: auto;
+    min-height: 200px;
+    padding: 50px 10px 10px 10px;
+  }
+  
+  input[type="text"] + label, input[type="password"] + label, textarea + label {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    line-height: 40px;
+    font-size: 12px;
+    font-weight: bold;
+    width: 80px;
+    text-shadow: 0 0 2px rgba(0,0,0,0.1);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    color: white;
+    background: $blue;
+    border-radius: 3px 0 0 3px;
+    transition: all 0.3s $custom-easing;
+    transform: translateZ(0) translateX(0);
+  }
+  
+  select:focus {
+    outline: none;
+  }
+ 
+  option {
+    outline: none;
+  }
+  input[type="text"]:focus, input[type="password"]:focus {
+    padding-left: 10px; 
+    outline: none;
+  }
+  
+  input[type="text"]:focus + label, input[type="password"]:focus + label {
+    transform: translateZ(0) translateX(-100%);
+  }
+ 
+  
+  input[type="radio"] + label {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    text-indent: -9999px;
+    background: $gray;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    cursor: pointer;
+    transition: all 0.3s $custom-easing;
+    &:before {
+      content: '';
+      position: absolute;
+      display: block;
+      height: 10px;
+      width: 10px;
+      top: 50%;
+      left: 50%;
+      background: white;
+      border-radius: 100%;
+      box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
+      transition: all 0.3s $custom-easing 0.1s;
+      transform: translateZ(0) translate(-50%, -50%) scale(0);
+    }
+  }
+  
+  input[type="radio"]:checked + label {
+    background: $blue;
+    &:before {
+      transform: translateZ(0) translate(-50%, -50%) scale(1);
+    }
+  }
+  
+ 
+  
+  button {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow: hidden;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 20px;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    color: white;
+    border: none;
+    background: $blue;
+    border-radius: 3px;
+   
+}
+   button:hover{
+      cursor: pointer;
+    }
+}
+
+.info{
+   padding: 20px;
+  margin: 0 auto;
+  max-width: 70%;
+  @media screen and (max-width: 500px) {
+      max-width: 100%;
+    
+  }
+}
+.math {
+  width: 50%;
+   margin: 0 auto;
+   @media screen and (max-width: 700px) {
+     width: 100%;
+    
+  }
+
+   padding: 10px;
+  text-align: center;
+ p {
+      border-bottom: 2px solid #c7ecf6;
+      font-weight: 20em;
+      line-height: 1;
+      margin-top: -12px;
+      color: #4f5053;
+  }
+}
+ p {
+    font-size: 19px;
+    line-height: 1.7;
+    padding-bottom: 10px;
+    margin-bottom: 25px;
+   @media screen and (max-width: 500px) {
+      font-size: 15px;
+    
+  }
+  }
+  .header{
+     border-bottom: 0.5px solid $gray;
+     padding-bottom: 10px;
+    margin-bottom: 25px;
+  }
+  h1 {
+    padding-bottom: 10px;
+    margin-bottom: 25px;
+    font-family: 'Open Sans';
+    font-weight: 100;
+    text-align: center;
+    color: $blue;
+   
+  }
+/**
+  * Demo scaffolding
+  * --------------------------------------------------
+  */
+*,
+*:before,
+*:after
+{
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+
+.circ
+{
+    position: relative;
+    display: block;
+    width: 25%;
+    left: 0%;
+  
+    margin: 50px auto;
+
+    -webkit-animation: fadeIn .4s ease-in .4s both;
+            animation: fadeIn .4s ease-in .4s both;
+}
+.circ:before,
+.circ:after
+{
+    display: table;
+
+    content: ' ';
+}
+.circ:after
+{
+    clear: both;
+}
+@media only screen and (min-width: 600px)
+{
+    .circ
+    {
+        width: 600px;
+    }
+}
+
+.column
+{
+    
+
+    width: 300px;
+    padding: 25px;
+}
+
+@-webkit-keyframes fadeIn
+{
+    0%
+    {
+        opacity: 0;
+    }
+
+    100%
+    {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn
+{
+    0%
+    {
+        opacity: 0;
+    }
+
+    100%
+    {
+        opacity: 1;
+    }
+}
+/**
+  * Donut Chart
+  * --------------------------------------------------
+  */
+.donut-chart
+{
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+    position: relative;
+    overflow: hidden;
+    left: 50%;
+    transform: translate(-50%);
+    width: 250px;
+    height: 250px;
+
+    border-radius: 50%;
+    background-color: $blue;
+    -webkit-box-shadow: 0 0 0 6px rgba(0, 0, 0, .10);
+            box-shadow: 0 0 0 6px rgba(0, 0, 0, .10);
+}
+
+.outer-circle,
+.inner-circle
+{
+    position: absolute;
+
+    border-radius: 50%;
+}
+
+.outer-circle
+{
+    top: 6%;
+    right: 6%;
+    bottom: 6%;
+    left: 6%;
+
+    background-color: #fff;
+    -webkit-box-shadow: inset 0 0 0 6px rgba(0, 0, 0, .2);
+            box-shadow: inset 0 0 0 6px rgba(0, 0, 0, .2);
+}
+
+.inner-circle
+{
+    display: none;
+    top: 22%;
+    right: 22%;
+    bottom: 22%;
+    left: 22%;
+    background-color: #f5f7fa;
+    -webkit-box-shadow: 0 0 0 6px rgba(0, 0, 0, .2);
+            box-shadow: 0 0 0 6px rgba(0, 0, 0, .2);
+}
+
+.inner-circle-label,
+.inner-circle-value
+{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.inner-circle-label
+{
+    font-size: 18px;
+    line-height: 1;
+    margin-top: -30px;
+    color: $blue;
+}
+
+.inner-circle-value
+{
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 1;
+
+    margin-top: -12px;
+
+    color: #656d78;
+}
+
+.wedge-container,
+.wedge,
+.wedge-extension,
+.wedge-label
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    -webkit-transition: all .4s linear;
+            transition: all .4s linear;
+
+    border-radius: 50%;
+}
+
+.wedge,
+.wedge-extension
+{
+    -webkit-box-shadow: inset 0 0 0 6px rgba(0, 0, 0, .2);
+            box-shadow: inset 0 0 0 6px rgba(0, 0, 0, .2);
+}
+
+.wedge-value
+{
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 20px;
+
+    position: absolute;
+    top: 5%;
+    left: 50%;
+
+    display: block;
+
+    width: 30px;
+    margin-left: -15px;
+
+    text-align: center;
+}
+
+.wedge-extension
+{
+    z-index: 100;
+}
+
+.wedge
+{
+    z-index: 200;
+}
+
+.wedge-label
+{
+    z-index: 300;
+}
