--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
       <link rel="stylesheet" type="text/css" href="{{site.url}}/style.css" />
      <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.tagline }}</title>
-    <link rel="shortcut icon" href="{{site.baseurl}}/images/fav.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="{{site.url}}/images/fav.jpg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css"/>
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.tagline }}" href="{{ site.url }}/feed.xml" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
