--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,11 @@
   <div class="content">
  {{ content }}
  </div>
-  <footer>
-    
-  </footer>
+  <footer class="footer">
+            <span>&copy; All Rights Reserved 2020 taxmygig.com</span>
+         
+        
+      </footer>
 
        {% include scripts.html %}
 </body>
