--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,7 @@
  </div>
   <footer class="footer">
             <span>&copy; All Rights Reserved 2020 taxmygig.com</span>
-         
-        
+            <span><a href="{{site.baseurl}}/privacy-policy/">Privacy Policy</a></span> 
       </footer>
 
        {% include scripts.html %}
