--- a/style.scss
+++ b/style.scss
@@ -375,7 +375,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
 footer {
   padding: 20px 0;
   text-align: center;
-  border-top: 0.5px solid $lightGray;
+  border-top: 0.5px solid $gray;
    
 }
 footer span {
