--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,4 +7,4 @@
 
 <!--Custom scripts -->
 
-<script src="{{ '/assets/js/calc.js' | relative_url }}"></script>
+<script src="{{ '/js/calc.js' | relative_url }}"></script>
