--- a/style.scss
+++ b/style.scss
@@ -11,8 +11,7 @@ $distance: 70; //px
 $width: 30; //px
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+html, body, div, span, applet, object, iframe, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
