--- a/style.scss
+++ b/style.scss
@@ -59,7 +59,9 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   position: relative;
   left: 50%;
   transform: translate(-50%);
+  max-height: 40px;
 }
+
 .hd {
   width: 100%;
   max-height: 200px;
