--- a/style.scss
+++ b/style.scss
@@ -60,6 +60,9 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   left: 50%;
   transform: translate(-50%);
   max-height: 40px;
+  img {
+  height: 40px; 
+  }
 }
 
 .hd {
