--- a/style.scss
+++ b/style.scss
@@ -229,7 +229,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     transition: all 0.3s $custom-easing;
     transform: translateZ(0) translateX(0);
   }
-    input[type="text"], input[type="password"]  {
+    input[type="tel"], input[type="password"]  {
     width: 95%;
     height: 40px;
     padding: 10px 10px 10px 90px;
@@ -248,7 +248,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     padding: 50px 10px 10px 10px;
   }
   
-  input[type="text"] + label, input[type="password"] + label, textarea + label {
+  input[type="tel"] + label, input[type="password"] + label, textarea + label {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -276,12 +276,12 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
   option {
     outline: none;
   }
-  input[type="text"]:focus, input[type="password"]:focus {
+  input[type="tel"]:focus, input[type="password"]:focus {
     padding-left: 10px; 
     outline: none;
   }
   
-  input[type="text"]:focus + label, input[type="password"]:focus + label {
+  input[type="tel"]:focus + label, input[type="password"]:focus + label {
     transform: translateZ(0) translateX(-100%);
   }
  
