--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
   <footer class="footer">
             <span>&copy; All Rights Reserved 2020 taxmygig.com</span>
             <span><a href="{{site.url}}/privacy-policy/">Privacy Policy</a></span> 
+            <span>| images: <a href="https://www.vecteezy.com">vecteezy</a></span> 
       </footer>
 
        {% include scripts.html %}
