--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
     <link rel="manifest" href="/manifest.json">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119970438-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119970438-3');
+    </script>
+
   
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
