--- a/style.scss
+++ b/style.scss
@@ -218,7 +218,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     line-height: 40px;
     font-size: 12px;
     font-weight: bold;
-    width: 80px;
+    max-width: 80px;
     text-shadow: 0 0 2px rgba(0,0,0,0.1);
     text-align: center;
     text-transform: uppercase;
