--- a/style.scss
+++ b/style.scss
@@ -206,7 +206,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     box-sizing: border-box;
     border-top: 0.1px solid #fff;
     border-bottom: 1px solid $gray;
-    color: #fff;
+    color: #333;
     border-radius: 3px;
   }
   
@@ -220,7 +220,6 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     font-size: 12px;
     font-weight: bold;
     max-width: 80px;
-    text-shadow: 0 0 2px rgba(0,0,0,0.1);
     text-align: center;
     text-transform: uppercase;
     letter-spacing: .05em;
