--- a/style.scss
+++ b/style.scss
@@ -176,41 +176,34 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
   }
   
  
+ 
+ 
   .row {
     margin-bottom: 25px;
     position: relative;
-   
+    width: 100%;
     overflow: hidden;
   }
   .formRow{
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
+    height: 200px;
     position: relative;
     left: 50%;
     transform: translate(-50%);
     @media screen and (max-width: 650px) {
     display: flex;
     flex-direction: column;
+      height: 300px;
+      
     
   }
   }
   
-  select {
-        
-    width: 90%;
-    height: 40px;
-    padding: 10px 10px 10px 90px;
-    margin-right: 20px;
-    box-sizing: border-box;
-    border-top: 0.1px solid #fff;
-    border-bottom: 1px solid $gray;
-    color: #333;
-    border-radius: 3px;
-  }
-  
- .row >  label {
+
+ #inputRow >  label {
      position: absolute;
     top: 0;
     bottom: 0;
@@ -219,7 +212,8 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     line-height: 40px;
     font-size: 12px;
     font-weight: bold;
-    width: 80px;
+    max-width: 80px;
+    text-shadow: 0 0 2px rgba(0,0,0,0.1);
     text-align: center;
     text-transform: uppercase;
     letter-spacing: .05em;
@@ -228,6 +222,95 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     border-radius: 3px 0 0 3px;
     transition: all 0.3s $custom-easing;
     transform: translateZ(0) translateX(0);
+  }
+  
+   #selectRow {
+     min-width: 100%;
+    display: flex;
+    align-items: center;
+       @media screen and (max-width: 650px) {
+      display: flex;
+      flex-direction: column;
+       align-items: center;
+  }
+  }
+  #stateRow {
+    width: 100%;
+    margin-left: 60px;
+    margin-right: -40px;
+  }
+#stateRow > label {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    line-height: 40px;
+    width: 80px;
+    font-size: 12px;
+    font-weight: bold;
+    text-shadow: 0 0 2px rgba(0,0,0,0.1);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    color: white;
+    background: $blue;
+    border-radius: 3px 0 0 3px;
+  }
+ 
+  #stateRow > select {
+     
+    max-width: 68%;
+    height: 40px;
+    padding: 10px 10px 10px 90px;
+    box-sizing: border-box;
+    border-top: 0.1px solid #fff;
+    border-bottom: 1px solid $gray;
+    color: #333;
+    border-radius: 3px;
+   @media screen and (max-width: 650px) {
+    min-width: 50%;
+    
+  }
+    
+  
+  } 
+  #statusRow {
+    width: 100%;
+    margin-right: -30px;
+  }
+  #statusRow > label {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    line-height: 40px;
+    width: 80px;
+    font-size: 12px;
+    font-weight: bold;
+    text-shadow: 0 0 2px rgba(0,0,0,0.1);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    color: white;
+    background: $blue;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  #statusRow > select {
+     
+    min-width: 85%;
+    height: 40px;
+    padding: 10px 10px 10px 90px;
+    box-sizing: border-box;
+    border-top: 0.1px solid #fff;
+    border-bottom: 1px solid $gray;
+    color: #333;
+    border-radius: 3px;
+     @media screen and (max-width: 650px) {
+    width: 65%;
+    
   }
 
 
