--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,3 @@
----
----
 
 
 $custom-easing: cubic-bezier(1, .1, 0, 0.9);
@@ -158,6 +156,9 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
   padding: 20px;
   margin: 0 auto;
   max-width: 50%;
+   @media screen and (max-width: 1080px) {
+    max-width: 65%;
+  }
   @media screen and (max-width: 928px) {
     max-width: 80%;
   }
@@ -174,9 +175,6 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     color: #474f4a;
     margin-bottom: -20px;
   }
-  
- 
- 
  
   .row {
     margin-bottom: 25px;
@@ -423,12 +421,12 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     background: $blue;
     border-radius: 3px;
    
-}
    button:hover{
       cursor: pointer;
     }
 }
-
+  }
+}
 .info{
    padding: 20px;
   margin: 0 auto;
@@ -711,3 +709,4 @@ footer span {
 {
     z-index: 300;
 }
+
