--- a/style.scss
+++ b/style.scss
@@ -311,6 +311,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
     width: 65%;
     
   }
+ }
 
 
 	
@@ -426,7 +427,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
       cursor: pointer;
     }
   }
-
+}
 .info{
    padding: 20px;
   margin: 0 auto;
