--- a/style.scss
+++ b/style.scss
@@ -40,6 +40,7 @@ html {
 body {
   width: 100%;
   height: 100%;
+  overlfow-x:hidden !important;
 }
 
 .nav {
@@ -431,14 +432,14 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
 .info{
    padding: 20px;
   margin: 0 auto;
-  max-width: 70%;
+  max-width: 100%;
   @media screen and (max-width: 500px) {
       max-width: 100%;
     
   }
 }
 .math {
-  width: 50%;
+  width: 70%;
    margin: 0 auto;
    @media screen and (max-width: 700px) {
      width: 100%;
