--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
  </div>
   <footer class="footer">
             <span>&copy; All Rights Reserved 2020 taxmygig.com</span>
-            <span><a href="{{site.url}}/privacy-policy/">Privacy Policy</a></span> 
+            <span><a href="{{site.url}}/privacy-policy/">privacy policy</a></span> 
             <span>| images: <a href="https://www.vecteezy.com">vecteezy</a></span> 
       </footer>
 
