--- a/style.scss
+++ b/style.scss
@@ -513,7 +513,7 @@ box-shadow: 0px -2px 10px 0px #69D3A7;
      padding-bottom: 10px;
     margin-bottom: 25px;
   }
-  h1 {
+  h1, h2 {
     padding-bottom: 10px;
     margin-bottom: 25px;
     font-family: 'Open Sans';
