--- a/_layouts/sticky.html
+++ b/_layouts/sticky.html
@@ -19,9 +19,7 @@
     
     <main>
       <div class='s-nav'>
-        	 <div id='lex' class='btn'><p>Visit Lex</p></div>
-            <a href="{{ site.baseurl }}/"><img class="home-logo" src="{{site.baseurl}}/images/home-logo.png" /></a>
-            
+        	    <a  class="nav-image" alt="taxlogo" href="{{site.url}}"> <img src="{{site.url}}/images/taxmygig.jpg" /></a>   
       </div>
    <!-- <div class='ad-hero'>
       Ads soon to come =)
