--- a/_layouts/sticky.html
+++ b/_layouts/sticky.html
@@ -29,16 +29,11 @@
         {{ content }}
       </div>
        <!-- end of main content -->
-      <div class="wrapper-footer">
-        <div class="container">
-          <footer class="footer">
-            <span>&copy; All Rights Reserved 2018 howtocodejs.com</span>
-            <span><a href="https://termsfeed.com/terms-conditions/2460b3ff454f533c4d29560443c83d8b">Terms and Conditions</a></span>
-            <span><a href="{{site.baseurl}}/privacy-policy/">Privacy Policy</a></span>
-             <span><a href="{{site.baseurl}}/about/">About</a></span>
-          </footer>
-        </div>
-      </div>
+       <footer class="footer">
+            <span>&copy; All Rights Reserved 2020 taxmygig.com</span>
+            <span><a href="{{site.url}}/privacy-policy/">privacy policy</a></span> 
+            <span>| images: <a href="https://www.vecteezy.com">vecteezy</a></span> 
+      </footer>
       {% include scripts.html %}
       {% include analytics.html %}
     </main>
