--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,67 @@ $distance: 70; //px
 $width: 30; //px
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 
+[class*='col-'] {
+	float: left;
+	padding-right: 20px;
+}
+/* Gutters */
+[class*='col-']:last-of-type {
+	padding-right: 0;
+}
+.col-2-3 {
+	width: 66.66%;
+}
+.col-1-6 {
+	width: 16.67%;
+}
+.col-1-2 {
+  width: 42.5%;
+}
+.col-1-3 {
+	width: 33.33%;
+}
+.col-1-4 {
+  width: 22%;
+}
+.col-3-4 {
+  width: 73%;
+}
+.col-4-5 {
+	width: 80%;
+}
+
+.col-mini {
+  width: 1%;
+}
+
+/*
+Clear
+ */
+.wrapper:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+*, *:after, *:before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
 html, body, div, span, applet, object, iframe, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -64,6 +125,269 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   height: 40px; 
   }
 }
+=====
+Sticky posts
+====
+.s-nav {
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  background-color: #fff;
+  border-bottom: 1px solid $lightGray;
+  text-align: center;
+  z-index: 4;
+  display: flex;
+  flex-direction: row;
+    .box-burger {
+	@include mini-mobile {
+   	 margin-right: 20px;
+    
+  	}    	    
+    }	
+}
+
+.sticky-page {
+  width: 100%;
+  height: 100%;
+}
+
+.w-container {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  overflow-x: hidden;
+
+}
+.content-bucket {
+  width: 100%;
+  overflow:  hidden;
+  transition: width 2s ease;
+  display: block;
+}
+.w-container .post {
+  font-family: Cambria, Georgia, serif;
+	font-size: 18px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 30px;
+  position: relative;
+  background-color: #fff;
+  padding: 170px;
+  margin-left: 280px;
+  @include wide-laptop {
+    margin-left: 180px;
+   
+  }
+  @include ipad {
+    padding: 120px;
+    margin-left: 180px;
+   
+  }
+  // @include laptop {
+  //  width: 75%;
+  //  margin-left: 0px;
+  // }
+  @include mini-pad {
+    width: 100%;
+    margin-left: 0px;
+  }
+  @include lg-mobile {
+    width: 100%;
+  }
+  @include mobile {
+   padding: 30px;
+   padding-top: 50px;
+  }
+  .fp-title {
+    @include wide-laptop {
+      padding: 60px;
+    }
+    @include ipad {
+      padding: 10px;
+    }
+    @include kindle {
+      padding: 0px;
+    }
+    font-weight: 700;
+    font-size: 50px;
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+
+  h1 {
+    text-align: center;
+    padding: 10px;
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 30px;
+    text-align: center;
+    color: #000;
+    padding: 8px;   
+  }
+  h3, h4 {
+    border-bottom: 2px solid $lightGray;
+    padding-bottom: 8px;
+    -webkit-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
+    -moz-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
+    box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
+  }
+  h3 {
+    font-size: 20px;
+    width: 75%;
+  }
+  h4 {
+    font-size: 21px;
+    width: 50%;
+  }
+  h5 {
+    width: 25%;
+  }
+
+  blockquote {
+    margin: 1.8em .8em;
+    border: 3px solid $lexOrange;
+    padding: 5px;
+    background-color: #fff;
+    padding: 0.1em 1em;
+    color: #000;
+    font-size: 19px;
+    -moz-box-shadow: $close-shadow;
+    -webkit-box-shadow: $close-shadow;
+    box-shadow: $close-shadow;
+  }
+}
+.comments {
+ @include ipad {
+   width: 80%;
+ }
+ width: 50%;
+ position: relative;
+ left: 50%;
+ transform: translateX(-50%);
+ margin-top: 15px;
+}
+.hiddenbar {
+  @include mini-mobile {
+    padding-left: 60px;
+  }
+  position: fixed;
+  z-index: 50;
+  top: 0px;
+  right:-500px;
+  height: 100%;
+  background-color: #fff;
+  overflow-y: scroll;
+  // padding-left: 30px;
+  // padding-right: 30px;
+  border-left: 5px solid $lexOrange;
+  transition: all ease 2s;
+  -webkit-box-shadow: -1px 1px 3px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 1px 3px 0px rgba(0,0,0,0.75);
+  box-shadow: -1px 1px 3px 0px rgba(0,0,0,0.75);
+  -webkit-transition: right 0.5s ease-out;
+ -moz-transition: right 0.5s ease-out;
+ -o-transition: right 0.5s ease-out;
+  transition: right 0.5s ease-out;
+
+  .box-cross {
+    z-index: 50;
+    cursor: pointer;
+    width: 40px;
+    transition: width ease-out 0.5s;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    margin-left: 270px;
+    margin-right: 20px;
+    #row-1 {
+      transform: rotate(40deg);
+      margin-right: 1px;
+    }
+    #row-2 {
+      transform: rotate(-40deg);
+      margin-right: 1px;
+    }
+    .row {
+      display: flex;
+      margin-bottom: 1px;
+      margin-left: 2px;
+    }
+    .box {
+      background-color: #000;
+      width: 20px;
+      height: 5px;
+      display: block;
+      margin-bottom: 1px;
+    }
+    .box:nth-of-type(2){
+      width: 14px;
+    }
+  }
+  .more {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+  }
+
+  .archive {
+      border-top: 3px solid $lightGray;
+      border-bottom: 3px solid $lightGray;
+      text-align: center;
+      font-size: 20px;
+      color: #000;
+      background-color: #fff;
+      padding: 10px;
+      margin: 0px;
+      width: 100%;
+    }
+    .archive:hover {
+     cursor: pointer;
+     background-color: $lexOrange;
+     color: #fdfdfd;
+    }
+     a:link {
+      color: #000;
+    }
+     a:visited {
+      color: #000;
+    }
+}
+.adbar {
+  @include laptop {
+    width: 30%;
+  }
+  @include lg-mobile {
+    display: none;
+  }
+  width: 10%;
+  padding: 30px;
+  background-color: #fdfdfd;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  z-index: 0;
+  height: 900px;
+  overflow: hidden;
+}
+
+.sidebar {
+  @include mini-pad {
+   display: none;
+  }
+  padding: 10px;
+  margin-right: 3px;
+  position: fixed;
+  top: 45px;
+  left: 0px;
+  z-index: 0;
+  height: 100%;
+  overflow: hidden;
+  .more {
+   text-align: center;
+  }
+
+}
+
 
 .hd {
   width: 100%;
