--- a/style.scss
+++ b/style.scss
@@ -114,9 +114,9 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   height: 40px; 
   }
 }
-=====
-Sticky posts
-====
+
+/* Sticky Posts */
+
 .s-nav {
   position: fixed;
   width: 100%;
