--- a/_layouts/sticky.html
+++ b/_layouts/sticky.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="{{site.baseurl}}/images/fav.jpg" type="image/x-icon">
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Source+Sans+Pro" rel="stylesheet">
+     <link rel="shortcut icon" href="{{site.url}}/images/favicon.png" type="image/x-icon">
   </head>
   <body>
     
