--- a/style.scss
+++ b/style.scss
@@ -336,10 +336,14 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   h5 {
     width: 25%;
   }
+  p {
+  font-size: 14px;
+
+}
 
   blockquote {
     margin: 1.8em .8em;
-    border: 3px solid $lexOrange;
+    border: 3px solid  $lightGray;
     padding: 5px;
     background-color: #fff;
     padding: 0.1em 1em;
