--- a/style.scss
+++ b/style.scss
@@ -343,7 +343,7 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
 
   blockquote {
     margin: 1.8em .8em;
-    border: 3px solid  $lightGray;
+    border: 3px solid $darkerGray;
     padding: 5px;
     background-color: #fff;
     color: #000;
