--- a/style.scss
+++ b/style.scss
@@ -955,6 +955,10 @@ footer span {
     margin-left: 5px;
 }
 
+footer span a{
+    font-size: 9px;
+   
+}
 /**
   * Demo scaffolding
   * --------------------------------------------------
