--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,8 @@
  </div>
   <footer class="footer">
             <span>&copy; All Rights Reserved 2020 taxmygig.com</span>
-            <span><a href="{{site.url}}/privacy-policy/">Privacy Policy</a></span> 
-             <span>|<a href="{{site.url}}/about/">About</a></span>
+            <span><a href="{{site.url}}/privacy-policy/">Privacy Policy</a>|</span> 
+             <span><a href="{{site.url}}/about/">About</a></span>
             <span>| Images: <a href="https://www.vecteezy.com">vecteezy</a></span>
     <span>| Owner: <a href ="https://www.linkedin.com/in/raji-ayinla/">Raji Ayinla</a></span> 
       </footer>
