--- a/_layouts/sticky.html
+++ b/_layouts/sticky.html
@@ -40,7 +40,8 @@
        <!-- end of main content -->
        <footer class="footer">
             <span>&copy; All Rights Reserved 2020 taxmygig.com</span>
-            <span><a href="{{site.url}}/privacy-policy/">privacy policy</a></span> 
+            <span><a href="{{site.url}}/privacy-policy/">privacy policy</a> |</span>
+            <span><a href="{{site.url}}/about/">About</a></span>
             <span>| images: <a href="https://www.vecteezy.com">vecteezy</a></span> 
       </footer>
       {% include scripts.html %}
