--- a/style.scss
+++ b/style.scss
@@ -197,6 +197,13 @@ body {
   overlfow-x: hidden !important;
 }
 
+b {
+  font-weight: bold;
+}
+
+ol {
+  font-size: 12px;
+}
 .nav {
     width: 100%;
     height: 50px;
