--- a/style.scss
+++ b/style.scss
@@ -1197,49 +1197,49 @@ Wave partition
 
 
 
-.header {
-  position:relative;
-  text-align:center;
-  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
-  color:white;
-}
-.logo {
-  width:50px;
-  fill:white;
-  padding-right:15px;
-  display:inline-block;
-  vertical-align: middle;
-}
+// .header {
+//   position:relative;
+//   text-align:center;
+//   background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+//   color:white;
+// }
+// .logo {
+//   width:50px;
+//   fill:white;
+//   padding-right:15px;
+//   display:inline-block;
+//   vertical-align: middle;
+// }
 
-.inner-header {
-  height:65vh;
-  width:100%;
-  margin: 0;
-  padding: 0;
-}
+// .inner-header {
+//   height:65vh;
+//   width:100%;
+//   margin: 0;
+//   padding: 0;
+// }
 
-.flex { /*Flexbox for containers*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
+// .flex { /*Flexbox for containers*/
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   text-align: center;
+// }
 
-.waves {
-  position:relative;
-  width: 100%;
-  height:15vh;
-  margin-bottom:-7px; /*Fix for safari gap*/
-  min-height:100px;
-  max-height:150px;
-}
+// .waves {
+//   position:relative;
+//   width: 100%;
+//   height:15vh;
+//   margin-bottom:-7px; /*Fix for safari gap*/
+//   min-height:100px;
+//   max-height:150px;
+// }
 
-.content {
-  position:relative;
-  height:20vh;
-  text-align:center;
-  background-color: white;
-}
+// .content {
+//   position:relative;
+//   height:20vh;
+//   text-align:center;
+//   background-color: white;
+// }
 
 /* Animation */
 
