--- a/style.scss
+++ b/style.scss
@@ -516,14 +516,14 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   }
   z-index: 2;
 }
-.content {
-  width: 100%;
-  border-top: 2px solid #69D3A7;
-  -webkit-box-shadow: 0px 3px 10px 0px #69D3A7;
--moz-box-shadow: 0px 3px 10px 0px #69D3A7;
-box-shadow: 0px -2px 10px 0px #69D3A7;
+// .content {
+//   width: 100%;
+//   border-top: 2px solid #69D3A7;
+//   -webkit-box-shadow: 0px 3px 10px 0px #69D3A7;
+// -moz-box-shadow: 0px 3px 10px 0px #69D3A7;
+// box-shadow: 0px -2px 10px 0px #69D3A7;
    
-}
+// }
 
 .toggle_bar {
   text-align:center;
