--- a/style.scss
+++ b/style.scss
@@ -1203,9 +1203,9 @@ Wave partition
   background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
   color:white;
     border-top: 1px solid #69D3A7;
-  -webkit-box-shadow: 0px 3px 10px 0px #69D3A7;
--moz-box-shadow: 0px 3px 10px 0px #69D3A7;
-box-shadow: 0px -2px 10px 0px #69D3A7;
+  -webkit-box-shadow: 0px -8x 15px -9px #69D3A7;
+-moz-box-shadow: 0px -8px 15px -9px #69D3A7;
+box-shadow: 0px -8px 15px -9px #69D3A7;
 }
 
 .inner-header {
