--- a/style.scss
+++ b/style.scss
@@ -204,11 +204,14 @@ body {
 
 ol {
   font-size: 17px;
-	li {
+ margin-bottom: 5px;
+	
+}
+
+li {
 	margin-bottom: 3px;
 	
 	}
-}
 .nav {
     width: 100%;
     height: 50px;
