--- a/style.scss
+++ b/style.scss
@@ -337,6 +337,7 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   h3, h4 {
     border-bottom: 2px solid $lightGray;
     padding-bottom: 8px;
+    margin-botton: 5px;
     -webkit-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
     -moz-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
     box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
@@ -358,8 +359,10 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
 }
 	
 ul {
-margin-bottom: 4px;
+margin-bottom: 8px;
+margin-left: 10px;
 padding: 4px;
+
 }
 li {padding: 4px;}
 
