--- a/style.scss
+++ b/style.scss
@@ -332,10 +332,9 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
     color: #000;
     padding: 8px;   
   }
-  h3, h4 {
+  h3 {
     border-bottom: 2px solid $lightGray;
-    padding-bottom: 8px;
-    margin-botton: 5px;
+   
     -webkit-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
     -moz-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
     box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
@@ -345,8 +344,9 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
     width: 75%;
   }
   h4 {
-    font-size: 17px;
-    width: 50%;
+    font-size: 16px;
+    padding-bottom: 8px;
+    margin-botton: 5px;
   }
   h5 {
     width: 25%;
