--- a/style.scss
+++ b/style.scss
@@ -271,7 +271,7 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   display: block;
 }
 .w-container .post {
-  font-family: Cambria, Georgia, serif;
+  font-family: Times New Roman, Times, serif;
 	font-size: 18px;
 	font-style: normal;
 	font-variant: normal;
@@ -340,8 +340,7 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
     box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
   }
   h3 {
-    font-size: 20px;
-    width: 75%;
+    font-size: 19px;
   }
   h4 {
     font-size: 16px;
@@ -366,11 +365,12 @@ li {padding: 4px;}
 
   blockquote {
     margin: 1.8em .8em;
-    border: 3px solid $darkerGray;
+    border-top: 0.5px solid $darkerGray;
+    border-bottom: 0.5px solid $darkerGray;
     padding: 5px;
     background-color: #fff;
     color: #000;
-    font-size: 19px;
+    font-size: 18.5px;
     -moz-box-shadow: $close-shadow;
     -webkit-box-shadow: $close-shadow;
     box-shadow: $close-shadow;
