--- a/style.scss
+++ b/style.scss
@@ -301,6 +301,7 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
   }
   @include lg-mobile {
     width: 100%;
+    font-size: 15px;
   }
   @include mobile {
    padding: 30px;
@@ -333,15 +334,17 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
     padding: 8px;   
   }
   h3 {
-    border-bottom: 2px solid $lightGray;
-   
+        font-size: 19px;
+       @include lg-mobile {
+   	 font-size: 17px;
+  	}
+       margin-bottom: 5px;	  
+       border-bottom: 2px solid $lightGray;
     -webkit-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
     -moz-box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
     box-shadow: 6px 9px 5px -10px rgba(0,0,0,0.75);
   }
-  h3 {
-    font-size: 19px;
-  }
+ 
   h4 {
     font-size: 16px;
     padding-bottom: 8px;
