--- a/style.scss
+++ b/style.scss
@@ -367,10 +367,11 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.75);
         font-size: 19px;
        @include lg-mobile {
    	 font-size: 17px;
+	  width: 90%;     
   	}
        margin-bottom: 20px;	  
        border-bottom: 0.9px solid $lightGray;
-
+	width: 77%;
   }
  
   h4 {
