--- a/_layouts/sticky.html
+++ b/_layouts/sticky.html
@@ -3,6 +3,7 @@
   <head>
     <title>{% if page.title %}{{ page.title }}</title>
     {% include meta.html %}
+    <meta name="keywords" content="Self Employment Tax, Self Employment, Estimated Tax">
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
